# Sendyra

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/: main.py
src/sendyra/: config.py
src/sendyra/core/: android.py  board.py  discovery.py  models.py  peers.py  server.py
src/sendyra/ui/: app.py  board_view.py  peers_view.py  share_view.py  state.py
tests/: smoke_test.py
